[package]
name = "scales"
version = "0.1.1"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"
description = "A utility library for converting values between scales."
repository = "https://github.com/bbmsoft/scales.git"
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/bbmsoft/scales.git", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
assert_approx_eq = "1.1"